--- a/2.html
+++ b/2.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html" target="_blank"> About me</h1>
+  <h1><a href="index.html"> About me</h1>
   <ol>
     <li><a href="1.html" target="_blank">Things I like</a></li>
     <li><a href="2.html" target="_blank">Summer break plans</a></li>
@@ -25,6 +25,13 @@ Let's write down some goals for my summer break</p>
     <img width="100%" src="study.jpg" style="padding: 20px 0px 40px">
     <li>Taking lectures 생활코딩 to make webpages and games<br>
     and all the fancy things in the future</li>
+    <p>
+      <iframe width="560" height="315"
+      src="https://www.youtube.com/embed/7T7r_oSp0SE"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    </p>
     <img width="100%" src="coding.jpg" style="padding: 20px 0px 40px">
     <li>Also going to do some croquis with friends<br>
     to improve my drawing skills</li>
