--- a/3.html
+++ b/3.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html" target="_blank"> About me</h1>
+  <h1><a href="index.html"> About me</h1>
   <ol>
     <li><a href="1.html" target="_blank">Things I like</a></li>
     <li><a href="2.html" target="_blank">Summer break plans</a></li>
